# pgscm

./: .coveragerc  .gitignore  .testr.conf  .travis.yml  CODEOWNERS  MANIFEST.in  README.rst  babel.cfg  config.py  data-dev.sqlite  data-test.sqlite  manage.py  quick_start.md  requirements.txt  run.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  wsgi.py
adminlte/: __init__.py
adminlte/static/js/: app.js
adminlte/static/pages/examples/: login.html
adminlte/templates/adminlte/: base.html  base_without_nav.html  widgets.html
app/: __init__.py  email.py  resources.py
app/admin/: views.py
app/auth/: forms.py  views.py
app/db/: models.py  resources.py
app/main/: views.py
app/models/: models.py  resources.py
app/templates/: __init__.py  base.html  index.html
app/templates/auth/: lockscreen.html
app/templates/security/: lockscreen.html
doc/: PGS_CM_Feature_list.ods  no_schema_pgscm_dev_master_data.sql  pgcsm-relational-diagram.xml  schema_pgscm_dev_master_data.sql
migrations/: env.py
migrations/versions/: 14775eb2f3b4_.py  2159f60b94ab_remove _unique=True_in _fullname.py  32c1cbb13ec2_add_geo_db.py  38c4e85512a9_initial_migration.py  456a945560f6_login_support.py  56502d362ab5_trackable_user_info.py  5c3ebec69cdd_make_delete_modify_private.py  84fc7bc201e6_.py  84fc7bc201e6_add_index_for_geo_db.py  91b7a3d00a9e_.py  b91f6260d520_.py  b91f6260d520_create_model_objects.py  c7b7fb8e6536_add_created_at_column.py  de313b629296_add_member_count_cert_table.py  ef552a46d4ff_add_farmer_rel_to_cert.py  f4a514c76767_add_index.py
pgscm/: __init__.py  const.py  email.py  utils.py
pgscm/admin/: __init__.py  forms.py  views.py
pgscm/associate_group/: __init__.py  forms.py  views.py
pgscm/certificate/: __init__.py  forms.py  views.py
pgscm/db/: models.py  resource_manager.py  resources.py
pgscm/farmer/: __init__.py  forms.py  views.py
pgscm/group/: __init__.py  forms.py  views.py
pgscm/main/: __init__.py  views.py
pgscm/report/: __init__.py  views.py
pgscm/security/: forms.py
pgscm/static/css/: table.css  table_cert_history.css
pgscm/templates/: 404.html  500.html  base.html  index.html  macro.html
pgscm/templates/admin/: alarm.html  index.html  macro.html  regions_management.html  user.html
pgscm/templates/agroup/: index.html  macro.html
pgscm/templates/certificate/: advance_search.html  details.html  index.html  template_draft.html
pgscm/templates/farmer/: index.html  macro.html
pgscm/templates/group/: index.html
pgscm/templates/report/: alarm.html
pgscm/templates/security/: lockscreen.html  login_user.html  register_user.html
pgscm/translations/: messages.pot
pgscm/translations/vi/LC_MESSAGES/: flask_security.mo  flask_security.po  messages.mo  messages.po
tests/: test_basics.py  test_user_model.py
tools/: i18n.sh
