[metadata]
name = pgscm
summary = PGS Certificate Management
description-file =
    README.rst
author = Hieu LE
author-email = hieulq19@gmail.com
home-page = http://vietnamorganic.vn/
classifier =
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    pgscm

[compile_catalog]
directory = pgscm/locale
domain = pgscm

[update_catalog]
domain = pgscm
output_dir = pgscm/locale
input_file = pgscm/locale/app.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pgscm/locale/pgscm.pot

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true